# HeTeX.hx

./: .gitmodules  Cargo.toml  LICENSE  README.MD  build.rs  cog.scm  hetex-lib.scm  hetex.scm  shell.nix  tests.tex
libtexprintf/src/: texprintfsymbols
src/: bindings.rs  lib.rs  main.rs
