[package]
name = "helix-latex"
version = "0.1.0"
edition = "2021"

[lib]
name = "helix_latex"
crate-type = ["rlib", "cdylib"]

[build-dependencies]
bindgen = "0.72.0"

[dependencies]
steel-core = { version = "0.7.0", git = "https://github.com/mattwparas/steel.git", features = ["dylibs", "sync"] }
abi_stable = "0.11.1"
